--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
 @import "./styles/App.css";
 @import "./styles/Main.css";
 @import "./styles/Register.css";
-
+@import "./styles/Login.css";
+@import "./styles/TopBar.css";
+@import "./styles/Home.css";
 body {
     margin: 0;
     padding: 0;
