create post modal and form

--- a/src/styles/TopBar.css
+++ b/src/styles/TopBar.css
@@ -16,6 +16,11 @@
     height: 50px;
 }
 
+.App-header-left {
+    display: flex;
+    align-items: center;
+}
+
 .App-link {
     color: #61dafb;
 }
